prusti-tests/tests/verify_overflow/ui/counterexamples/pure-sum-2.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure-sum-2.rs:14:11
   |
14 | #[ensures(sum(5) == 0)] //TODO: add ce support for pure functions in specifications
   |           ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure-sum-2.rs:15:1
   |
15 | fn test1() {}
   | ^^^^^^^^^^^^^
note: counterexample for "result"
       value:   ()
  --> $DIR/pure-sum-2.rs:15:12
   |
15 | fn test1() {}
   |            ^^

error: aborting due to previous error

